3-Kubernetes/distributed/yaml/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: distributed
  labels:
    name: distributed
