3-Kubernetes/distributed/yaml/2-clusterIP-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
  namespace: distributed
spec:
  selector:
    app: todo-front
  ports:
  - port: 80
    targetPort: 80
