3-Kubernetes/distributed/yaml/5-clusterIP-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: distributed
spec:
  selector:
    app: todo-api
  ports:
  - port: 3000
    targetPort: 3000
